--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# wallhouse
+
 <!DOCTYPE HTML>
 
 <html>
@@ -26,11 +26,12 @@
 	<h2>Announcements:</h2>
 	<ul>
 		<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
+		<li> SMCSU pub night will take place at Firkin on Bay - November 24th. Visit <a href="https://www.instagram.com/usmcsu/?hl=en" target="_blank">SMCSU's instagram </a> for more details </li>
 	</ul>
 	<h2>Upcoming events:</h2>
 	<ul>
-		<li>Dean's Cup (November 19th)</li>
-		<li>Harbourfront Walk (November 20th)</li>
+		<li>Residence-wide trip to the Christmas Market (November 24th)</li>
+		<li>Christmas decoration house social (December 1st)</li>
 	</ul>
 	<h2>Social media:</h2>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;">
