--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 			font-size: 70px;
 			text-align: center;
 		}
-		#sorbara-photo {
-			text-align: center;
-		}
 	</style>
 </head>
 
@@ -26,7 +23,7 @@
 	<h2>Announcements:</h2>
 	<ul>
 		<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-		<li> SMCSU pub night will take place at Firkin on Bay - November 24th. Visit <a href="https://www.instagram.com/usmcsu/?hl=en" target="_blank">SMCSU's instagram </a> for more details </li>
+		<li> SMCSU pub night will take place at Firkin on Bay - November 24th @7pm. Visit <a href="https://www.instagram.com/usmcsu/?hl=en" target="_blank">SMCSU's instagram </a> for more details </li>
 	</ul>
 	<h2>Upcoming events:</h2>
 	<ul>
@@ -34,9 +31,8 @@
 		<li>Christmas decoration house social (December 1st)</li>
 	</ul>
 	<h2>Social media:</h2>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;">
+	<a href="https://www.instagram.com/wallhouse2023/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;"></a>
 	<p><a href="https://www.instagram.com/wallhouse2023/">Instagram</a></p>
 </body>
-
-
+	
 </html>
