--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 	<h2>Announcements:</h2>
 	<ul>
 		<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-		<li> SMCSU pub night will take place at Firkin on Bay - November 24th @7pm. Visit <a href="https://www.instagram.com/usmcsu/?hl=en" target="_blank">SMCSU's instagram </a> for more details </li>
+		<li>Join us for Christmas decorations in the common room tonight at 8:30 pm!</li>
 	</ul>
 	<h2>Upcoming events:</h2>
 	<ul>
-		<li>Residence-wide trip to the Christmas Market (November 24th)</li>
 		<li>Christmas decoration house social (December 1st)</li>
 	</ul>
 	<h2>Important websites:</h2>
