--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 			text-align: center;
 			font-weight: bold;
 		}
-		header {
+		.header {
 			background-color: green;
+			border: 10px ridge #f00;
 		}
 	</style>
 </head>
