--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 			font-weight: bold;
 		}
 		.header {
-			background-color: green;
+			background-color: white;
 			border: 10px ridge #f00;
+		}
+		.header p {
+			font-size: 65 px;
+			font-color: rgb(0, 34, 94);
+			text-align: center;
 		}
 	</style>
 </head>
@@ -24,7 +29,7 @@
 <body>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
-		<p>Sorbara 4th</p>
+		<p>Wall House</p>
 	</div>
 	<img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;">
 	<p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p>
