--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		}
 		.header {
 			background-color: white;
-			border: 10px ridge #f00;
-			height: 100 px;
+			border: 10px ridge rgb(0, 0, 0);
+			height: 500 px;
 		}
 		.header p {
-			font-size: 65 px;
-			font-color: rgb(0, 34, 94);
+			size: 65 px;
+			color: rgb(0, 34, 94);
 			text-align: center;
 		}
 	</style>
@@ -30,7 +30,7 @@
 <body>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
-		<p>Wall House!</p>
+		<p>Wall House</p>
 	</div>
 	<img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;">
 	<p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p>
