--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 		}
 		.header {
 			background-color: white;
-			border: 10px ridge rgb(0, 0, 0);
+			border: 5px ridge rgb(0, 34, 94);
 			height: 500 px;
 		}
 		.header p {
 			size: 65 px;
 			color: rgb(0, 34, 94);
 			text-align: center;
+			font-weight: bold;
 		}
 	</style>
 </head>
