--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<p>Wall House</p>
 	</div>
 	<br>
-	<img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;">
+	<center><img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 	<p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p>
 	<h2>Announcements:</h2>
 	<ul>
