--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Wall House</title>
 	<style>
 		body {
-			background-color: rgb(247, 241, 233);
+			background-color: rgb(97, 160, 168);
 		}
 		h1 {
 			font-size: 65px;
@@ -15,15 +15,19 @@
 			font-weight: bold;
 		}
 		.header {
-			background-color: white;
+			background-color: rgb(255, 251, 252);
 			border: 5px ridge rgb(0, 34, 94);
 			height: 500 px;
 		}
 		.header p {
-			size: 300 px;
+			font-size: 100 px;
 			color: rgb(0, 34, 94);
 			text-align: center;
 			font-weight: bold;
+		}
+		.announcements {
+			background-color: rgb(255, 251, 252);
+			border: 5px ridge rgb(0, 34, 94);
 		}
 	</style>
 </head>
@@ -36,11 +40,13 @@
 	<br>
 	<center><img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 	<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
-	<h2>Announcements:</h2>
-	<ul>
-		<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-		<li>Join us for Christmas decorations in the common room tonight at 8:30 pm!</li>
-	</ul>
+	<div class="announcements>
+		    <h2>Announcements:</h2>
+			<ul>
+			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
+			<li>Join us for Christmas decorations in the common room tonight at 8:30 pm!</li>
+		</ul>
+	</div>
 	<h2>Upcoming events:</h2>
 	<ul>
 		<li>Christmas decoration house social (December 1st)</li>
