--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		.announcements {
 			background-color: rgb(255, 251, 252);
 			border: 5px ridge rgb(0, 34, 94);
+			height: 500 px;
 		}
 	</style>
 </head>
