--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			height: 500 px;
 		}
 		.website-body {
-			background-color: gray;
+			background-color: rgb(255, 251, 252);
 			margins: auto;
-			border: solid 2px;
+			border: solid 4px;
 		}
 	</style>
 </head>
@@ -50,7 +50,7 @@
 		<h2>Announcements:</h2>
 			<ul>
 			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-			<li>Join us for Christmas decorations in the common room tonight at 8:30 pm!</li>
+			<li>Good luck studying for exams!</li>
 		</ul>
 		<br>
 		<h2>Upcoming events:</h2>
@@ -68,7 +68,7 @@
 					<td><a href="https://www.instagram.com/stmikesresidencecouncil/" target="blank">SMRC</a></td>
 				</tr>
 				<tr>
-					<td><a href="https://usmcsu.ca/" target="_blank"><img src="https://scontent-yyz1-1.xx.fbcdn.net/v/t39.30808-6/305768268_606772044237744_5953416556131481230_n.png?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=Vw_AHa-i10wAX9yCOqh&_nc_ht=scontent-yyz1-1.xx&oh=00_AfDrDrdbTHUmsjx4MoCeVYcx9lcX8w7e03ogRSUC_Pn4qg&oe=63803C38" style="width:50px;"></a></td>
+					<td><a href="https://usmcsu.ca/" target="_blank"><img src="https://scontent-yyz1-1.xx.fbcdn.net/v/t39.30808-6/305768268_606772044237744_5953416556131481230_n.png?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=BbjPlPHMYH4AX9GNu_z&_nc_ht=scontent-yyz1-1.xx&oh=00_AfDiaaYOUbllfyWP2ok4JALnFXkVj2kEy14ooqCebBEZ9g&oe=63920878" style="width:50px;"></a></td>
 					<td><a href="https://usmcsu.ca/" target="_blank">SMCSU</a></td>
 				</tr>
 				<tr>
