--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		.website-body {
 			background-color: rgb(255, 251, 252);
 			margins: auto;
-			border: solid 4px;
+			border: solid 4px rgb(0, 34, 94);
 			padding: 2px;
 		}
 	</style>
@@ -53,10 +53,9 @@
 			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
 			<li>Good luck studying for exams!</li>
 		</ul>
-		<br>
 		<h2>Upcoming events:</h2>
 		<ul>
-			<li>Christmas decoration house social (December 1st)</li>
+			<li>SMRC formal (December 8th)</li>
 		</ul>
 		<h2>Important websites:</h2>
 			<table>
