--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 			border: solid 4px rgb(0, 34, 94);
 			padding: 2px;
 		}
+		#footer {
+			background-color: gray;
+			height: 30 px:
+			bottom: 0px;
+		}
 	</style>
 </head>
 
@@ -78,6 +83,9 @@
 			</table>
 	
 		<p>Contact House Council directly by reaching out to our Instagram account!</p>
+	</div>
+	<div id="footer">
+		<p>...</p>
 	</div>
 </body>
 	
