--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 			background-color: gray;
 			height: 30 px:
 			bottom: 0px;
+			margin: 0px;
+		}
+		#sorbara-photo {
+			width: 750px;
+			border: solid 2px rgb(0, 34, 94);
 		}
 	</style>
 </head>
@@ -49,7 +54,7 @@
 	<div class="header">
 	</div>
 	<br>
-	<center><img class="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
+	<center><img id="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 	<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
 		   
 	<div class="website-body">
@@ -85,7 +90,6 @@
 		<p>Contact House Council directly by reaching out to our Instagram account!</p>
 	</div>
 	<div id="footer">
-		<p>...</p>
 	</div>
 </body>
 	
