--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 			padding: 2px;
 		}
 		#footer {
-			background-color: gray;
+			background-color: pink;
 			height: 30 px:
 			bottom: 0px;
-			margin: 0px;
+			border: solid 4px rgb(0, 34, 94);
 		}
 		#sorbara-photo {
 			width: 750px;
@@ -87,9 +87,9 @@
 				</tr>
 			</table>
 	
-		<p>Contact House Council directly by reaching out to our Instagram account!</p>
 	</div>
 	<div id="footer">
+		<center><h2>Contact House Council directly by reaching out to our Instagram account!</h2></center>
 	</div>
 </body>
 	
