--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			height: 500 px;
 		}
 		.header p {
-			font-size: 100 px;
+			font-size: 80 px;
 			color: rgb(0, 34, 94);
 			text-align: center;
 			font-weight: bold;
@@ -46,12 +46,21 @@
 			width: 750px;
 			border: solid 2px rgb(0, 34, 94);
 		}
+		.link {
+			background-color: pink;
+			border: dashed 1px gray;
+		}
 	</style>
 </head>
 
 <body>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
+		<table>
+			<tr><div class="link" id="link1">hi</div></tr>
+			<tr><div class="link" id="link2">hello</div></tr>
+			<tr><div class="link" id="link3">hi</div></tr>
+		</table>
 	</div>
 	<br>
 	<center><img id="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
