--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@
 		}
 		.link {
 			background-color: pink;
-			border: dashed 1px gray;
-			vertical-align: baseline;
+			width: 33%;
+		}
+		#link1 {
+			float: left;
+		}
+		#link2 {
+			float: middle;
+		}
+		#link3 {
+			float: right;
 		}
 	</style>
 </head>
