--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
 		<table>
-			<tr><div class="link" id="link1">hi</div></tr>
+			<tr><div class="link" id="link1">vibes</div></tr>
 			<tr><div class="link" id="link2">hello</div></tr>
 			<tr><div class="link" id="link3">hi</div></tr>
 		</table>
