--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>Wall House</title>
+	<title>Formal Information (Deceber 7th-8th)</title>
 	<style>
 		body {
 			background-color: rgb(259, 251, 252);
