--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 
 <html>
-
+<meta charset="UTF-8">
 <head>
 	<title>Wall House</title>
 	<style>
@@ -55,6 +55,10 @@
 </head>
 
 <body>
+	<nav>
+		<a href="torontomu.ca">Ryerson</a>
+		<a href="yorku.ca">York</a>
+	</nav>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
 	</div>
