--- a/index.html
+++ b/index.html
@@ -46,16 +46,26 @@
 			width: 750px;
 			border: solid 2px rgb(0, 34, 94);
 		}
-		.link {
+		.nav-bar {
 			background-color: pink;
-			width: 100%;
+			overflow: hidden;
 		}
-
+		
+		.nav-bar a {
+			font-size: 18px;
+			color: rgb(0, 34, 94);
+			text-align: center;
+		}
+		
+		nav.bar a:hover {
+			background-color: #ddd;
+  			color: black;
+		}
 	</style>
 </head>
 
 <body>
-	<nav>
+	<nav class="nav-bar">
 		<a href="torontomu.ca">Ryerson</a>
 		<a href="yorku.ca">York</a>
 	</nav>
