--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <html>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<title>Wall House</title>
 	<style>
@@ -57,9 +58,14 @@
 			text-align: center;
 		}
 		
-		nav.bar a:hover {
+		.nav-bar a:hover {
 			background-color: #ddd;
   			color: black;
+		}
+		
+		.nav-bar a.active {
+			background-color: #04AA6D;
+			color: white;
 		}
 	</style>
 </head>
