--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
 		.nav-bar {
 			background-color: pink;
 			overflow: hidden;
+			height: 30px;
+			border: solid 4px rgb(0, 34, 94);
 		}
 		
 		.nav-bar a {
+			float: left;
 			font-size: 18px;
 			color: rgb(0, 34, 94);
 			text-align: center;
+			text-decoration: none;
 		}
 		
 		.nav-bar a:hover {
