--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 		.nav-bar {
 			background-color: pink;
 			overflow: hidden;
-			height: 30px;
-			border: solid 4px rgb(0, 34, 94);
+			height: 50px;
 		}
 		
 		.nav-bar a {
@@ -60,6 +59,7 @@
 			color: rgb(0, 34, 94);
 			text-align: center;
 			text-decoration: none;
+			padding: 14px 16px; 
 		}
 		
 		.nav-bar a:hover {
