--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			border: solid 2px rgb(0, 34, 94);
 		}
 		.nav-bar {
-			background-color: pink;
+			background-color: rgb(0, 34, 94);
 			overflow: hidden;
 			height: 50px;
 		}
@@ -56,14 +56,14 @@
 		.nav-bar a {
 			float: left;
 			font-size: 18px;
-			color: rgb(0, 34, 94);
+			color: white;
 			text-align: center;
 			text-decoration: none;
 			padding: 14px 16px; 
 		}
 		
 		.nav-bar a:hover {
-			background-color: #ddd;
+			background-color: pink;
   			color: black;
 		}
 		
@@ -76,6 +76,7 @@
 
 <body>
 	<nav class="nav-bar">
+		<a href="lnhall.github.io/wallhouse">Home</a>
 		<a href="torontomu.ca">Ryerson</a>
 		<a href="yorku.ca">York</a>
 	</nav>
