--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <body>
 	<nav class="nav-bar">
-		<a href="lnhall.github.io/wallhouse">Home</a>
+		<a href="#home">Home</a>
 	</nav>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
