--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
-			border: 5px ridge rgb(0, 34, 94);
+			border: 5px ridge pink;
 			height: 500 px;
 		}
 		.header p {
@@ -78,6 +78,7 @@
 <body>
 	<nav class="nav-bar">
 		<a href="#home">Home</a>
+		<a href="#contact">Contact</a>
 	</nav>
 	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
 	<div class="header">
@@ -90,11 +91,11 @@
 		<h2>Announcements:</h2>
 			<ul>
 			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-			<li>Good luck studying for exams!</li>
+			<li></li>
 		</ul>
 		<h2>Upcoming events:</h2>
 		<ul>
-			<li>SMRC formal (December 8th)</li>
+			<li>Residence reopens (January 8th)</li>
 		</ul>
 		<h2>Important websites:</h2>
 			<table>
