--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
-			border: 5px ridge pink;
+			border: 5px ridge rgb(0, 34, 94);
 			height: 500 px;
 		}
 		.header p {
@@ -91,7 +91,6 @@
 		<h2>Announcements:</h2>
 			<ul>
 			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
-			<li></li>
 		</ul>
 		<h2>Upcoming events:</h2>
 		<ul>
