--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			font-size: 65px;
 			text-align: center;
 			font-weight: bold;
+			font: monaco;
+			font-family: monospace;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -94,7 +96,7 @@
 		</ul>
 		<h2>Upcoming events:</h2>
 		<ul>
-			<li>Residence reopens (January 8th)</li>
+			<li>Residence reopens</li>
 		</ul>
 		<h2>Important websites:</h2>
 			<table>
