--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 			font-size: 65px;
 			text-align: center;
 			font-weight: bold;
-			font: monaco;
-			font-family: monospace;
+			font-family: "monaco", monospace;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -82,7 +81,7 @@
 		<a href="#home">Home</a>
 		<a href="#contact">Contact</a>
 	</nav>
-	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
+	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House.</strong> - 2022-2023</h1>
 	<div class="header">
 	</div>
 	<br>
