--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			font-size: 65px;
 			text-align: center;
 			font-weight: bold;
-			font-family: "monaco", monospace;
+			font-family: "rockwell";
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
