--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<ul>
 			<li>Residence reopens</li>
 		</ul>
-		<h2>Important websites:</h2>
+		<h2 id="#contact">Important websites:</h2>
 			<table>
 				<tr>
 					<td><a href="https://www.instagram.com/wallhouse2023/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;"></a></td>
