--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 <body>
 	<nav class="nav-bar">
 		<a href="#home">Home</a>
-		<a href="#contact">Contact</a>
+		<a href="./contact.html" title="contact">Contact</a>
 	</nav>
-	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong> - 2022-2023</h1>
+	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong></h1>
 	<div class="header">
 	</div>
 	<br>
