--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			text-align: center;
 			font-weight: bold;
 			font-family: "rockwell";
+			float: right;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -82,8 +83,8 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</div>
+		<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong></h1>
 	</nav>
-	<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong></h1>
 	<div class="header">
 	</div>
 	<br>
