--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		}
 		h1 {
 			font-size: 65px;
-			text-align: center;
 			font-weight: bold;
 			font-family: "rockwell";
 			float: right;
@@ -83,7 +82,7 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</div>
-		<h1 style="color: rgb(0, 34, 94)"> <strong>Wall House</strong></h1>
+		<h1 style="color: white"> <strong>Wall House</strong></h1>
 	</nav>
 	<div class="header">
 	</div>
