--- a/index.html
+++ b/index.html
@@ -82,10 +82,8 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</div>
-		<h1 style="color: white"> <strong>Wall House</strong></h1>
+		<h1 style="color: rgb(250, 250, 250)"> <strong>Wall House</strong></h1>
 	</nav>
-	<div class="header">
-	</div>
 	<br>
 	<center><img id="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 	<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
