--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			font-size: 65px;
 			font-weight: bold;
 			font-family: "rockwell";
-			float: right;
+			text-align: right;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -77,13 +77,13 @@
 </head>
 
 <body>
-	<nav id="header-nav" class="navbar navbar-default">
+	<div id="header-nav">
 		<div class="container">
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</div>
 		<h1 style="color: rgb(250, 250, 250)"> <strong>Wall House</strong></h1>
-	</nav>
+	</div>
 	<br>
 	<center><img id="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 	<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
