--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 		<h1 style="color: rgb(250, 250, 250)"> <strong>Wall House</strong></h1>
 	</div>
 	<br>
-	<center><img id="sorbara-photo" src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
-	<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
-		   
+	<div id="photo">
+		<center><img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
+		<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
+	</div>	   
 	<div class="website-body">
 		<h2>Announcements:</h2>
 			<ul>
