--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			font-weight: bold;
 			font-family: "rockwell";
 			text-align: right;
+			color: white;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -64,12 +65,12 @@
 			font-weight: bold;
 		}
 		
-		.nav-bar a:hover {
+		#header-nav a:hover {
 			background-color: pink;
   			color: black;
 		}
 		
-		.nav-bar a.active {
+		#header-nav a.active {
 			background-color: #04AA6D;
 			color: white;
 		}
@@ -82,7 +83,7 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</div>
-		<h1 style="color: rgb(250, 250, 250)"> <strong>Wall House</strong></h1>
+		<h1>Wall House</h1>
 	</div>
 	<br>
 	<div id="photo">
