--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		h1 {
 			font-size: 50px;
 			font-family: "rockwell";
-			text-align: right;
 			color: white;
 		}
 		.header {
@@ -52,6 +51,7 @@
 			background-color: rgb(0, 34, 94);
 			overflow: hidden;
 			height: 100px;
+			float: left;
 		}
 		
 		#header-nav a {
