--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			font-size: 50px;
 			font-family: "rockwell";
 			color: white;
+			text-align: right;
 		}
 		.header {
 			background-color: rgb(255, 251, 252);
@@ -55,7 +56,6 @@
 		}
 		
 		#header-nav a {
-			float: left;
 			font-size: 18px;
 			color: white;
 			text-align: center;
@@ -78,10 +78,10 @@
 
 <body>
 	<div id="header-nav">
-		<div class="container">
+		<span class="container">
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
-		</div>
+		</span>
 		<h1>Wall House</h1>
 	</div>
 	<br>
