--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			overflow: hidden;
 			height: 100px;
 			float: left;
+			width: 100%;
 		}
 		
 		#header-nav a {
@@ -82,7 +83,7 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</span>
-		<h1>Wall House</h1>
+		<h1>Wall House - 2022-23 </h1>
 	</div>
 	<br>
 	<div id="photo">
