--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE HTML>
 
 <html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="#contact" href="contact.html">
 	<title>Wall House</title>
 	<style>
 		body {
