--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="#contact" href="contact.html">
+	<link rel="#contact" href="contacts.html">
 	<title>Wall House</title>
 	<style>
 		body {
@@ -84,7 +84,7 @@
 			<a href="#home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</span>
-		<h1>Wall House - 2022-23 </h1>
+		<h1>Wall House </h1>
 	</div>
 	<br>
 	<div id="photo">
