--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="#home" href="index.html">
 	<link rel="#contact" href="contacts.html">
 	<title>Wall House</title>
 	<style>
@@ -81,8 +82,8 @@
 <body>
 	<div id="header-nav">
 		<span class="container">
-			<a href="#home">Home</a>
-			<a href="./contact.html" title="contact">Contact</a>
+			<a href="./index.html" title="home">Home</a>
+			<a href="./contacts.html" title="contact">Contact</a>
 		</span>
 		<h1>Wall House </h1>
 	</div>
