--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="#home" href="index.html">
 	<link rel="#contact" href="contact.html">
 	<title>Wall House</title>
 	<style>
