--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
 <body>
 	<div id="header-nav">
-		<span class="container">
+		<div class="container">
 			<a href="./index.html" title="home">Home</a>
 			<a href="./contacts.html" title="contact">Contact</a>
-		</span>
+		</div>
 		<h1>Wall House </h1>
 	</div>
 	<br>
