--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheets" href="styles.css">
 	<link rel="#home" href="index.html">
 	<link rel="#contact" href="contacts.html">
-	<link rel="stylesheets" href="styles.css">
 	<title>Wall House</title>
 </head>
 
@@ -17,7 +17,7 @@
 			<a href="./index.html" title="home">Home</a>
 			<a href="./contacts.html" title="contact">Contact</a>
 		</div>
-		<h1>Wall House </h1>
+		<h1>Wall House - 2022-23</h1>
 	</div>
 	<br>
 	<div id="photo">
