--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
 	<title>Wall House</title>
 	<style>
 		body {
-			background-color: black;
+			background-color: white;
 		}
 		h1 {
 			font-size: 50px;
