--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="#home" href="index.html">
-	<link rel="#contact" href="contact.html">
+	<link rel="#contact" href="contacts.html">
 	<title>Wall House</title>
 	<style>
 		body {
@@ -81,7 +81,7 @@
 <body>
 	<div id="header-nav">
 		<span class="container">
-			<a href="#home">Home</a>
+			<a href="./index.html" title="home">Home</a>
 			<a href="./contact.html" title="contact">Contact</a>
 		</span>
 		<h1>Wall House - 2022-23 </h1>
