--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
 			background-color: #04AA6D;
 			color: white;
 		}
+		
+		.content-block {
+			border: rgb(0, 34, 94) solid 2px;
+			background: pink;
+		}
+		
+		.content-block h2 {
+			background-color: rgb(0, 34, 94);
+			color: white;
+			font-family: rockwell;
+			text-align: center;
+			font-size: 35px;
+		}
 	</style>
 </head>
 
@@ -93,16 +106,22 @@
 		<center><img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Sam_Sorbara_Hall.JPG" style="width:750px;"></center>
 		<center><p style="font-size: 12px;"><em>image from <a href="https://sce.library.utoronto.ca/images/f/f5/Sorbara.jpg">library.utoronto.ca</a></em></p></center>
 	</div>	   
-	<div class="website-body">
+	<div class="content-block" id="announcements">
 		<h2>Announcements:</h2>
 			<ul>
 			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
 		</ul>
+	</div>
+	<br>
+	<div class="content-block" id="events">
 		<h2>Upcoming events:</h2>
 		<ul>
 			<li>Residence reopens</li>
 		</ul>
-		<h2 id="contact">Important websites:</h2>
+	</div>
+	<br>
+	<div class="content-block" id="websites">
+		<h2>Important websites:</h2>
 			<table>
 				<tr>
 					<td><a href="https://www.instagram.com/wallhouse2023/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;"></a></td>
