--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			border: solid 4px rgb(0, 34, 94);
 		}
 		#sorbara-photo {
-			width: 750px;
+			width: 500px;
 			border: solid 2px rgb(0, 34, 94);
 		}
 		#header-nav {
@@ -79,8 +79,9 @@
 		}
 		
 		.content-block {
-			border: rgb(0, 34, 94) solid 2px;
+			border: rgb(0, 34, 94) solid 5px;
 			background: pink;
+			padding: 10px;
 		}
 		
 		.content-block h2 {
@@ -88,7 +89,11 @@
 			color: white;
 			font-family: rockwell;
 			text-align: center;
-			font-size: 35px;
+			font-size: 30px;
+		}
+		.content-block p {
+			font-size: 18px;
+			font-family: sans-serif;
 		}
 	</style>
 </head>
@@ -122,7 +127,7 @@
 	<br>
 	<div class="content-block" id="websites">
 		<h2>Important websites:</h2>
-			<table>
+			<table id="social-media">
 				<tr>
 					<td><a href="https://www.instagram.com/wallhouse2023/" target="_blank"> <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" style="width:50px;"></a></td>
 					<td><a href="https://www.instagram.com/wallhouse2023/" target="_blank">Wall House Instagram</a></td>
