--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 			font-family: sans-serif;
 			text-align: center;
 		}
+		#social-media td{
+			text-align: center;
+		}
 		#social-media a {
 			font-size: 18px;
 			text-decoration: none;
