--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
 			background: pink;
-			padding: 10px;
+			padding-left: 10px;
 		}
 		
 		.content-block h2 {
@@ -96,7 +96,7 @@
 			font-family: sans-serif;
 			text-align: center;
 		}
-		#social-media td{
+		#social-media td {
 			text-align: center;
 		}
 		#social-media a {
