--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
 			padding: 2px;
 		}
 		#footer {
-			background-color: pink;
+			background-color: rgb(0, 34, 94);
 			height: 30 px:
 			bottom: 0px;
 			border: solid 4px rgb(0, 34, 94);
+		}
+		#footer p {
+			font-family: rockwell;
+			font-size: 18px;
+			font-color: white;
+			text-align: center;
 		}
 		#sorbara-photo {
 			width: 500px;
@@ -94,6 +100,9 @@
 		.content-block p {
 			font-size: 18px;
 			font-family: sans-serif;
+			text-align: center;
+		}
+		#social-media {
 			text-align: center;
 		}
 		#social-media td {
@@ -158,10 +167,11 @@
 					<td><a href="https://stmikes.utoronto.ca/" target="_blank">St. Michael's College</a></td>
 				</tr>
 			</table>
+		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 64);"> Contact us via our Instagram page! </p>
 	
 	</div>
 	<div id="footer">
-		<center><h2>Contact House Council directly by reaching out to our Instagram account!</h2></center>
+		<p>site created by House Council</p>
 	</div>
 </body>
 	
