--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@
 		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 64);"> Contact us via our Instagram page! </p>
 	
 	</div>
+	<br>
 	<div id="footer">
-		<p>site created by House Council</p>
+		<p>site created by House Council | updated 07 Jan 2023 11:04pm</p>
 	</div>
 </body>
 	
