--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@
 			font-family: sans-serif;
 			text-align: center;
 		}
+		.inner-block {
+			background-color: white;
+		}
 		#social-media {
-			text-align: center;
+			margin-left: auto;
+  			margin-right: auto;
 		}
 		#social-media td {
 			text-align: center;
@@ -147,6 +151,7 @@
 	<br>
 	<div class="content-block" id="websites">
 		<h2>Important websites:</h2>
+		<div class="inner-block" id=website-table">
 			<table id="social-media">
 				<thead></thead>
 				<thead></thead>
@@ -167,12 +172,13 @@
 					<td><a href="https://stmikes.utoronto.ca/" target="_blank">St. Michael's College</a></td>
 				</tr>
 			</table>
-		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 64);"> Contact us via our Instagram page! </p>
+		</div>
+		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 94);"> Contact us via our Instagram page! </p>
 	
 	</div>
 	<br>
 	<div id="footer">
-		<p>site created by House Council | updated 07 Jan 2023 11:04pm</p>
+		<p style="color: white;">site created by House Council | updated 07 Jan 2023 11:04pm</p>
 	</div>
 </body>
 	
