--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
 			background: pink;
-			padding-left: 10px;
 		}
 		
 		.content-block h2 {
@@ -96,6 +95,8 @@
 			font-family: rockwell;
 			text-align: center;
 			font-size: 30px;
+			margin-left: 100px;
+			margin-right: 100px;
 		}
 		.content-block p {
 			font-size: 18px;
