--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 		.content-block {
 			border: rgb(0, 34, 94) solid 5px;
 			background: pink;
+			margin-left: 100px;
+			margin-right: 100px;
 		}
 		
 		.content-block h2 {
@@ -95,8 +97,6 @@
 			font-family: rockwell;
 			text-align: center;
 			font-size: 30px;
-			margin-left: 100px;
-			margin-right: 100px;
 		}
 		.content-block p {
 			font-size: 18px;
@@ -105,6 +105,7 @@
 		}
 		.inner-block {
 			background-color: white;
+			padding: 50px;
 		}
 		#social-media {
 			margin-left: auto;
