--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			font-size: 30px;
 		}
 		.content-block p {
-			font-size: 18px;
+			font-size: 22px;
 			font-family: sans-serif;
 			text-align: center;
 		}
@@ -139,8 +139,8 @@
 	</div>	   
 	<div class="content-block" id="announcements">
 		<h2>Announcements:</h2>
-			<ul>
-			<li> Residence is closed from December 21, 2022 to January 8, 2023! Please check your email for information regarding accommodations over the break. </li>
+		<ul>
+			<li> Welcome back to residence! Residence will be open at 10:00am on January 8th (as will the Canada Room) </li>
 		</ul>
 	</div>
 	<br>
@@ -175,7 +175,7 @@
 				</tr>
 			</table>
 		</div>
-		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 94);"> Contact us via our Instagram page! </p>
+		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 94);" id="contact-us"> Contact us via our Instagram page! </p>
 	
 	</div>
 	<br>
