--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			text-align: center;
 			font-size: 30px;
 		}
-		.content-block p {
+		.content-block ul {
 			font-size: 22px;
 			font-family: sans-serif;
 			text-align: center;
