--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 			font-color: black;
 			font-family: sans-serif;
 		}
+		#contact-us {
+			text-align: center; 
+			font-size: 30px; 
+			color: rgb(0, 34, 94)
+			font-family: sans-serif;
+		}
 	</style>
 </head>
 
@@ -176,7 +182,7 @@
 				</tr>
 			</table>
 		</div>
-		<p style="text-align: center; font-size: 30px; color: rgb(0, 34, 94);" id="contact-us"> Contact us via our Instagram page! </p>
+		<p id="contact-us"> Contact us via our Instagram page! </p>
 	
 	</div>
 	<br>
