--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 		}
 		.inner-block {
 			background-color: white;
-			padding: 50px;
-			border: 5px solid rgb(0, 34, 94);
+			padding: 30px;
+			border-top: 5px solid rgb(0, 34, 94);
+			border-bottom: 5px solid rgb(0, 34, 94);
 		}
 		#social-media {
 			margin-left: auto;
