--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 		#contact-us {
 			text-align: center; 
 			font-size: 30px; 
-			color: rgb(0, 34, 94)
-			font-family: sans-serif;
+			color: rgb(0, 34, 94);
+			font-family: rockwell, sans-serif;
 		}
 	</style>
 </head>
