--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		#social-media {
 			margin-left: auto;
   			margin-right: auto;
-			border-spacing: 15px;
+			border-spacing: 15px 15px;
 		}
 		#social-media td {
 			text-align: center;
@@ -189,7 +189,7 @@
 	</div>
 	<br>
 	<div id="footer">
-		<p style="color: white;">site created by House Council | updated 08 Jan 2023 10:27am</p>
+		<p style="color: white;">site created by House Council | updated 08 Jan 2023 10:31am</p>
 	</div>
 </body>
 	
