--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 			background: rgb(255, 230, 230);
 			margin-left: 10%;
 			margin-right: 10%;
+			overflow: auto;
 		}
 		
 		.content-block h2 {
